[metadata]
name = napari-lucas
author = Lucas Schroefl
version = 0.4
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    napari-plugin-engine
    trackpy
    pandas
    scikit-image
    magicgui
    numpy
    Pillow
    scipy
    opencv-python
    qtpy
    imageio

[options.entry_points]
napari.manifest = 
	napari-lucas = napari_lucas:napari.yaml

[options.package_data]
* = *.yaml